--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,12 +25,12 @@ font-family: 'Poppins', sans-serif;
 /*-------------------------------------
 		1.General css (Reset code)
 --------------------------------------*/
-*{
+{
     padding: 0;
     margin: 0;
 }
 
-*{
+{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	-o-box-sizing:border-box;
